tweaked about me

--- a/index.html
+++ b/index.html
@@ -117,12 +117,15 @@
                 <div class="about-left">
                     <div class="card-paragraph">
                         I’m a freelance UX Designer and Front End Developer pursuing a full-time position. I currently
-                        live in Redondo Beach,
-                        located in the greater Los Angeles area. I earned my Bachelor of Science degree in Food Science
-                        from Cal Poly, San Luis Obispo. Transitioning into tech, I first earned my Full Stack Web
-                        Development certificate from UCLA Extension. With this foundation in coding, I have continued
-                        my education, gaining skills in UI/UX. I recently earned a UX Design Specialization Certificate
-                        from Cal Arts, in addition to several other certifications.
+                        live in Redondo Beach, located in the greater Los Angeles area. I earned my Bachelor of Science
+                        degree in Food Science from Cal Poly, San Luis Obispo.
+                    </div>
+                    <div class="card-paragraph">
+                        Transitioning into tech, I first earned my Full Stack Web Development certificate from UCLA
+                        Extension. With this foundation in coding, I have continued my education, gaining skills in
+                        UI/UX. I recently earned the UI/UX Design Specialization Certificate from Cal Arts, in addition
+                        to UX-related certifications from other programs. I am currently working on an all-new UX
+                        Design portfolio website to showcase my UX-focused work.
                     </div>
                     <div class="card-paragraph">
                         I studied Food Science so I could combine science and creativity in product development. As the
