misc cleaning up

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                 </li>
             </ul>
 
-            <div class="jelly-div tooltip">
+            <div class="jelly-div">
                 <img src=./public/images/jellyfish-logo.png class="jelly-logo" alt="Jellyfish Logo">
                 <span class="footnote">
                     My photos: Laguna Beach (top), Redondo Beach (everything else)
