edited skills paragraph

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 <div class="card-paragraph skills-paragraph">
                     The UCLA Full Stack Web Development certificate program covered the following topics. I am more
                     proficient with some of these than others, and am now focusing on expanding my knowledge of UX
-                    Design skills.
+                    Design.
                 </div>
             </div>
             <div class="skills-inner-box">
