wording edits in descriptions

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <b>Who:</b> Website was built by me
                             </li>
                             <li class="bullet">
-                                <b>Time:</b> Over the course of several weeks
+                                <b>Time:</b> Over the course of several weeks with ongoing input and coordination with the client
                             </li>
                             <li class="bullet">
                                 <b>Technologies:</b> Node.js, several npm modules
@@ -320,7 +320,7 @@
                                 once, you win.
                             </li>
                             <li class="bullet">
-                                <b>Why:</b> I wanted a relatively simple app to start out with for learning React. I
+                                <b>Why:</b> I wanted a relatively simple app to start with in order to learn React. I
                                 thought it would be fun to try out an interactive game to demonstrate React’s
                                 functionality.
                             </li>
