--- a/index.html
+++ b/index.html
@@ -116,22 +116,26 @@
             <div class="about-writing-section writing-section">
                 <div class="about-left">
                     <div class="card-paragraph">
-                        I’m a freelance UX Designer and Front End Developer pursuing a full-time position. I currently
+                        I’m a freelance UX Designer and Front End Developer pursuing a full-time position. I
                         live in Redondo Beach, located in the greater Los Angeles area. I earned my Bachelor of Science
                         degree in Food Science from Cal Poly, San Luis Obispo.
                     </div>
                     <div class="card-paragraph">
-                        Transitioning into tech, I first earned my Full Stack Web Development certificate from UCLA
+                        Transitioning into tech, I earned my Full Stack Web Development certificate from UCLA
                         Extension. With this foundation in coding, I have continued my education, gaining skills in
                         UI/UX. I recently earned the UI/UX Design Specialization Certificate from Cal Arts, in addition
-                        to UX-related certifications from other programs. I am currently working on an all-new UX
-                        Design portfolio website to showcase my UX-focused work.
+                        to UX-related certifications from other programs.
                     </div>
                     <div class="card-paragraph">
-                        I studied Food Science so I could combine science and creativity in product development. As the
+                        I studied Food Science with a desire to combine science and creativity in product development.
+                        As the
                         Research and Development Manager for a large snack foods company, I took products from ideation
                         to launch. My management background cultivated my comprehensive approach to problem solving and
                         provided me with an aptitude for understanding the needs of clients and customers.
+                    </div>
+                    <div class="card-paragraph">
+                        I love the outdoors, volleyball, pickleball, and learning about food and drink. I also enjoy
+                        photography, painting, drawing, movies, and video games.
                     </div>
                 </div>
                 <div class="about-right">
@@ -170,10 +174,11 @@
                                 <b>Why:</b> To showcase client's artwork
                             </li>
                             <li class="bullet">
-                                <b>Who:</b> Website was built by me
+                                <b>Who:</b> Solo project
                             </li>
                             <li class="bullet">
-                                <b>Time:</b> Over the course of several weeks with ongoing input and coordination with the client
+                                <b>Time:</b> Over the course of several weeks with ongoing input and coordination with
+                                the client
                             </li>
                             <li class="bullet">
                                 <b>Technologies:</b> Node.js, several npm modules
@@ -209,7 +214,7 @@
                                 JavaScript, or other topics.
                             </li>
                             <li class="bullet">
-                                <b>Who:</b> Website was built by me
+                                <b>Who:</b> Solo project
                             </li>
                             <li class="bullet">
                                 <b>Time:</b> About 1 week
@@ -249,7 +254,7 @@
                                 <b>Who:</b> This app was built by 3 people; I built the Front End
                             </li>
                             <li class="bullet">
-                                <b>Time:</b> The majority was built in about 1 week, but has been improved over time
+                                <b>Time:</b> The majority was built in about 1 week
                             </li>
                             <li class="bullet">
                                 <b>Technologies:</b> Node.js, jQuery, MySQL, and several npm modules
@@ -290,7 +295,7 @@
                                 the UI, set up all news-related widgets, and worked on various other parts
                             </li>
                             <li class="bullet">
-                                <b>Time:</b> The majority was built in about 1 week, but has been improved over time
+                                <b>Time:</b> The majority was built in about 1 week
                             </li>
                             <li class="bullet">
                                 <b>Technologies:</b> Multiple APIs, Node.js, React, MongoDB, and several npm modules
@@ -325,11 +330,10 @@
                                 functionality.
                             </li>
                             <li class="bullet">
-                                <b>Who:</b> Web game was built by me
+                                <b>Who:</b> Solo project
                             </li>
                             <li class="bullet">
-                                <b>Time:</b> The majority was built in about 1 week, but has been improved over time
-                                (mostly aesthetics)
+                                <b>Time:</b> The majority was built in about 1 week
                             </li>
                             <li class="bullet">
                                 <b>Technologies:</b> Node.js, React, and several npm modules
@@ -363,11 +367,10 @@
                                 people.
                             </li>
                             <li class="bullet">
-                                <b>Who:</b> Web app was built by me
+                                <b>Who:</b> Solo project
                             </li>
                             <li class="bullet">
-                                <b>Time:</b> The majority was built in about 1 week, but has been improved over time
-                                (mostly aesthetics)
+                                <b>Time:</b> The majority was built in about 1 week
                             </li>
                             <li class="bullet">
                                 <b>Technologies:</b> Node.js, my own vampire API, JSON, Express, and several other npm
