--- a/index.html
+++ b/index.html
@@ -116,26 +116,30 @@
             <div class="about-writing-section writing-section">
                 <div class="about-left">
                     <div class="card-paragraph">
-                        I’m a freelance UX Designer and Front End Developer pursuing a full-time position. I
-                        live in Redondo Beach, located in the greater Los Angeles area. I earned my Bachelor of Science
-                        degree in Food Science from Cal Poly, San Luis Obispo.
+                        I’m a freelance UX Designer and Front End Developer pursuing a full-time position. I live in
+                        Redondo Beach, located in the greater Los Angeles area.
                     </div>
                     <div class="card-paragraph">
+                        I earned my Bachelor of Science degree in Food Science from Cal Poly, San Luis Obispo.
                         Transitioning into tech, I earned my Full Stack Web Development certificate from UCLA
-                        Extension. With this foundation in coding, I have continued my education, gaining skills in
-                        UI/UX. I recently earned the UI/UX Design Specialization Certificate from Cal Arts, in addition
-                        to UX-related certifications from other programs.
+                        Extension.
+                        With this foundation in coding, I continued with education in User Experience Design. I earned
+                        the
+                        UI/UX Design Specialization Certificate from Cal Arts, in addition to UX-related certifications
+                        from other programs.
                     </div>
                     <div class="card-paragraph">
                         I studied Food Science with a desire to combine science and creativity in product development.
-                        As the
-                        Research and Development Manager for a large snack foods company, I took products from ideation
-                        to launch. My management background cultivated my comprehensive approach to problem solving and
-                        provided me with an aptitude for understanding the needs of clients and customers.
+                        In
+                        Research and Development Management and Quality Assurance, I took products from ideation to
+                        launch.
+                        My management background cultivated my comprehensive approach to problem solving and provided
+                        me
+                        with an aptitude for understanding the needs of clients and customers.
                     </div>
                     <div class="card-paragraph">
                         I love the outdoors, volleyball, pickleball, and learning about food and drink. I also enjoy
-                        photography, painting, drawing, movies, and video games.
+                        photography, painting, drawing, movies, music, and video games.
                     </div>
                 </div>
                 <div class="about-right">
